RESOLVED FIXED316051
[JSC] Fix undefined behavior in double-to-int conversions
https://bugs.webkit.org/show_bug.cgi?id=316051
Summary [JSC] Fix undefined behavior in double-to-int conversions
Sosuke Suzuki
Reported 2026-06-01 19:07:59 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-06-01 19:09:04 PDT
EWS
Comment 2 2026-06-02 03:55:29 PDT
Committed 314356@main (3825a1a93bbf): <https://commits.webkit.org/314356@main> Reviewed commits have been landed. Closing PR #66220 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-02 03:56:12 PDT
Note You need to log in before you can comment on or make changes to this bug.