Source/JavaScriptCore/dfg/DFGOperations.cpp
@@ -172,9 +172,6 @@ static ALWAYS_INLINE void putWithThis(JSGlobalObject* globalObject, EncodedJSVal
 
 static ALWAYS_INLINE EncodedJSValue parseIntResult(double input)
 {
-    int asInt = static_cast<int>(input);
-    if (static_cast<double>(asInt) == input && (asInt || !std::signbit(input))) [[likely]]
-        return JSValue::encode(jsNumber(asInt));
     return JSValue::encode(jsNumber(input));
 }
 
